--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,28 @@
 body {
-  /* text-align: center; */
-/* }
-
-.App { */
-  /* background-image: url("./components/images/helloHTML.png"); */
-  /* background-size: cover;
-  height: fit-content; */
   background-position: center;
   background-repeat: no-repeat;
   background-color: #1c1d1f ;
-  padding-top: 120px;
+  /* padding-top: 40px !important; */
+  /* scroll-padding-top: 40px !important; */
   color: azure;
+  margin: 0;
+  height:100%;
+  width:100%;
+  padding:0;
 }
 
 /* #1c1d1f */
+
+.homeSection {
+  background-image: url("./components/images/ppperspective.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height:100vh;
+  width: 100vw;
+}
+
+.navbarSection {
+  height:10vh;
+  width: 100vw;
+}
