--- a/src/components/styles/Navigation.css
+++ b/src/components/styles/Navigation.css
@@ -1,7 +1,10 @@
 .navigationbar {
     /* display: flex; */
     /* justify-content: center; */
-    /* position:fixed; */
+    /* position:sticky; */
+      /* padding-top: 40px !important; */
+  /* scroll-padding-top: 40px !important; */
+    /* top: 10px; */
     min-height: 5rem;
     background-color: #222325;
 }
@@ -16,3 +19,14 @@
     font-size: 1.5rem !important;
     color: white !important;
 }
+
+.navbar-toggler {
+    border-color: white !important;
+}
+
+/* .scrolled{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: lightblue;
+  } */
