--- a/src/components/styles/Navigation.css
+++ b/src/components/styles/Navigation.css
@@ -1,10 +1,4 @@
 .navigationbar {
-    /* display: flex; */
-    /* justify-content: center; */
-    /* position:sticky; */
-      /* padding-top: 40px !important; */
-  /* scroll-padding-top: 40px !important; */
-    /* top: 10px; */
     min-height: 5rem;
     background-color: #222325;
 }
@@ -17,16 +11,14 @@
 
 .nav-link {
     font-size: 1.5rem !important;
-    color: white !important;
+    color: #66d9ed !important;
 }
 
 .navbar-toggler {
     border-color: white !important;
 }
 
-/* .scrolled{
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: lightblue;
-  } */
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+}
+
