--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,62 @@
 body {
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #1c1d1f ;
+  background-color: #3a3c41;
   /* padding-top: 40px !important; */
   /* scroll-padding-top: 40px !important; */
   color: azure;
-  margin: 0;
-  height:100%;
-  width:100%;
-  padding:0;
+  margin: -80px 0 0 0;
+  height: 100%;
+  width: 100%;
+  padding: 0;
 }
 
 /* #1c1d1f */
 
 .homeSection {
-  background-image: url("./components/images/ppperspective.svg");
+  /* background-image: url("./components/images/space.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  height:100vh;
+  background-size: cover; */
+  height: 100vh;
   width: 100vw;
+  background-color: black;
 }
 
 .skillsSection {
-  height: 100vh;
-    width: 100vw;
-    position: relative;
+  min-height: 100vh;
+  width: 100vw;
+  position: relative;
 }
 
-.skillsSection::after {
-    background-image: url("./components/images/helloHTML.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 30%;
-    content: "";
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 5px;
-    right: 5px;
-     opacity: 0.25;
+@media screen and (min-width:992px) {
+
+  .skillsSection {
+    min-height: 60vh !important;
+  }
 }
+
+/* .skillsSection::after {
+  background-image: url("./components/images/helloHTML1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30%;
+  content: "";
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 5px;
+  right: 5px;
+  opacity: 0.25;
+} */
 
 .navbarSection {
-  height:10vh;
+  height: 10vh;
   width: 100vw;
 }
 
 .anchor {
   padding-top: 40px;
   margin-top: 40px;
-  caret-color: #1c1d1f !important;
+  caret-color: #3a3c41 !important;
 }
