--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,14 @@ body {
   background-size: cover; */
   height: 100vh;
   width: 100vw;
-  background-color: black;
+  background-color: #000;
 }
 
 .skillsSection {
   min-height: 100vh;
   width: 100vw;
-  position: relative;
+  position: relative;  
+  background-color: #000;
 }
 
 @media screen and (min-width:992px) {
