experimenting with projects content, refining skills section styleing

--- a/src/components/styles/Navigation.css
+++ b/src/components/styles/Navigation.css
@@ -14,7 +14,7 @@
 }
 
 .navbar-brand {
-    font-family: "Caveat", cursive, serif;
+    font-family: "Outfit", cursive, serif;
     font-size: 2.6rem !important;
     color: #9EDDFF;
     display: inline-block;
