--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #3a3c41;
+  /* background-color: #3a3c41; */
   /* padding-top: 40px !important; */
   /* scroll-padding-top: 40px !important; */
   color: azure;
@@ -23,11 +23,15 @@ body {
   background-color: #000;
 }
 
-.skillsSection {
+/* .skillsSection {
   min-height: 100vh;
   width: 100vw;
   position: relative;  
   background-color: #000;
+} */
+
+.contactSection {
+  text-align: center;
 }
 
 @media screen and (min-width:992px) {
@@ -36,20 +40,6 @@ body {
     min-height: 60vh !important;
   }
 }
-
-/* .skillsSection::after {
-  background-image: url("./components/images/helloHTML1.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 30%;
-  content: "";
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 5px;
-  right: 5px;
-  opacity: 0.25;
-} */
 
 .navbarSection {
   height: 10vh;
