--- a/src/components/styles/Carousel.css
+++ b/src/components/styles/Carousel.css
@@ -8,7 +8,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 100vh;
+	/* min-height: 100vh; */
 	background: #000;
 }
 .spinner {
@@ -43,7 +43,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	object-fit: fill;
 }
 
 #img1 {
