--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -42,9 +42,7 @@ video {
 
 .homeRow {
     text-align: center;
-    align-items: center;
-    align-content: center;
-    padding: 10px;
+    padding: 25px 10px;
 }
 
 .homeAnchor {
@@ -55,6 +53,12 @@ video {
 @media screen and (max-width: 768px) {
     .profile_img {
         max-width: 33% !important;
+    }
+    .myName {
+      font-size: 50px;
+    }
+    .jobTitle {
+      font-size:  20px;
     }
 }
 
