--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,13 @@ body {
   /* padding-top: 40px !important; */
   /* scroll-padding-top: 40px !important; */
   color: azure;
-  margin: -80px 0 0 0;
-  height: 100%;
-  width: 100%;
+  /* margin: 0; */
+  /* height: 100%;
+  width: 100%; */
   padding: 0;
 }
+
+
 
 /* #1c1d1f */
 
@@ -23,12 +25,13 @@ body {
   background-color: #000;
 }
 
-/* .skillsSection {
-  min-height: 100vh;
-  width: 100vw;
-  position: relative;  
+.projectsSection{
   background-color: #000;
-} */
+}
+
+.skillsSection, .contactSection {
+  background-color: #dfdfe2;
+}
 
 .contactSection {
   text-align: center;
