--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -1,7 +1,7 @@
 .about {
     text-align: center;
     padding-bottom: 10px;
-    color: #000;
+    color: #fff;
 }
 
 .skills {
@@ -10,6 +10,11 @@
 }
 #skills {
     padding: 15px 0;
+}
+
+.fa-cloud-arrow-down {
+    color: #e6d70a;
+    font-size: 2em;
 }
 
 .aboutMe code {
