--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -5,10 +5,6 @@ video {
   width: 100vw;
 }
 
-.main_img {
-  width: 100vw;
-}
-
 .background {
   height: 100%;
   width: 100%;
@@ -18,6 +14,37 @@ video {
   left: 0;
   position: absolute;
   overflow: hidden;
+}
+
+#home {
+  height: 100vh;
+  width: 100vw;
+  background-color: #000;
+  background-image: url(../assets/images/main_background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#mobile {
+  height: 100vh;
+  /* width: 100vw; */
+  background-color: #000;
+  background-image: url(../assets/images/main_background_mobile.png);
+  background-size: cover;
+  /* background-repeat: no-repeat; */
+  background-position: center;
+}
+
+.main_img {
+  max-width: 70% !important;
+  margin-left: auto;  
+  margin-right: auto;
+  text-align: center;
+}
+
+.profile_image {
+  max-width: 70% !important;
 }
 
 .profile_img {
@@ -208,7 +235,7 @@ video {
     width: 100px;
     height: 100px;
     margin-left: -50px;
-    margin-top: 525px;
+    margin-top: 10rem;
   }
   .scroll-down a {
     display: block;
