--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -27,13 +27,18 @@ video {
 }
 
 #mobile {
-  height: 100vh;
+  /* height: 100vh; */
   /* width: 100vw; */
   background-color: #000;
-  background-image: url(../assets/images/main_background_mobile.png);
-  background-size: cover;
+  /* background-image: url(../assets/images/main_background_mobile.png); */
+  /* background-size: cover; */
   /* background-repeat: no-repeat; */
-  background-position: center;
+  /* background-position: center; */
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
 }
 
 .main_img {
@@ -44,7 +49,7 @@ video {
 }
 
 .profile_image {
-  max-width: 70% !important;
+  max-width: 100%;
 }
 
 .profile_img {
@@ -80,6 +85,18 @@ video {
 
 .homeAnchor {
   visibility: hidden;
+}
+
+@media screen and (max-width:992px) {
+  /* .homeSection {
+    background-image: url(./components/assets/images/main_background_mobile.png);
+    background-position: center;
+    background-size: contain;
+    width: auto;
+  } */
+  .scroll-down {
+    margin-top: -50% !important;
+  }
 }
 
 @media screen and (max-width: 768px) {
