--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -1,7 +1,7 @@
 .about {
     text-align: center;
     padding-bottom: 10px;
-    color: #fff;
+    color: #9EDDFF;
 }
 
 .skills {
@@ -36,7 +36,6 @@
 .aboutMe, .educationList, .frontEndList, .backEndList, .devToolList {
     text-align: center;
     background-color: #7e7979;
-    /* border: solid 2px #000; */
     max-width: 95vw;
 }
 
