--- a/src/components/styles/contact.css
+++ b/src/components/styles/contact.css
@@ -1,4 +1,13 @@
-.contact, .contacth2, .contacth3, .copyright {
+#contact {
+    height: 50vh;
+    margin-top: 180px;
+}
+
+.contactAnchor {
+    color: #9EDDFF;
+}
+
+.contacth2, .contacth3, .copyright {
     color: #fff;
 }
 
@@ -31,8 +40,45 @@
 .footerList {
     align-content: space-around;
 }
-/* .contactAnchor {
-    padding-top: 40px;
-    margin-top: 40px;
-    color: #1c1d1f;
-} */
+
+/* email button */
+.btn-hover {
+    width: 160px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #000;
+    cursor: pointer;
+    margin: 20px;
+    height: 55px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+    border-radius: 50px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .btn-hover:hover {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .btn-hover:focus {
+    outline: none;
+  }
+  
+  .btn-hover.btn {
+    background-image: linear-gradient(
+      to right,
+      #25aae1,
+      #4481eb,
+      #04befe,
+      #3f86ed
+    );
+    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+  }
