--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,6 +1,6 @@
 #home {
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
   background-color: #000;
   background-image: url(../assets/images/main_background.png);
   background-size: cover;
@@ -25,222 +25,203 @@
   max-width: 100%;
 }
 
-@media screen and (max-width:992px) { 
-  .scroll-down {
-    margin-top: -50% !important;
+@media (min-width:1024px) { 
+  .mouse_scroll {
+    margin: 535px auto !important;
   }
+
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width:1024px) and (min-width:768px) { 
+  .mouse_scroll {
+    margin: -315px auto !important;
+  }
+
+}
+
+@media (max-width: 768px) {
     .profile_img {
         max-width: 33% !important;
     }
-    .myName {
-      font-size: 50px;
-    }
-    .jobTitle {
-      font-size:  20px;
-    }
+  
 }
 
 /* scroll down arrow */
-@-webkit-keyframes pulse {
-    0% {
-      opacity: 0;
-      background-position: center top;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-    10% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-      -moz-background-size: 75% auto;
-      -o-background-size: 75% auto;
-      -webkit-background-size: 75% auto;
-      background-size: 75% auto;
-    }
-    90% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0;
-      background-position: center bottom;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-  }
-  @-moz-keyframes pulse {
-    0% {
-      opacity: 0;
-      background-position: center top;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-    10% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-      -moz-background-size: 75% auto;
-      -o-background-size: 75% auto;
-      -webkit-background-size: 75% auto;
-      background-size: 75% auto;
-    }
-    90% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0;
-      background-position: center bottom;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-  }
-  @-ms-keyframes pulse {
-    0% {
-      opacity: 0;
-      background-position: center top;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-    10% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-      -moz-background-size: 75% auto;
-      -o-background-size: 75% auto;
-      -webkit-background-size: 75% auto;
-      background-size: 75% auto;
-    }
-    90% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0;
-      background-position: center bottom;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-  }
-  @keyframes pulse {
-    0% {
-      opacity: 0;
-      background-position: center top;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-    10% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-      -moz-background-size: 75% auto;
-      -o-background-size: 75% auto;
-      -webkit-background-size: 75% auto;
-      background-size: 75% auto;
-    }
-    90% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0;
-      background-position: center bottom;
-      -moz-background-size: 0 auto;
-      -o-background-size: 0 auto;
-      -webkit-background-size: 0 auto;
-      background-size: 0 auto;
-    }
-  }
-  body {
-    background-color: #fff;
-  }
+body {
+	background: #333;
+}
+
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
+
+.mouse_scroll {
+	display: block;
+	margin: 5px auto;
+	width: 24px;
+	height: 100px;
+	/* margin-top: 50px auto; */
+}
+
+
+.m_scroll_arrows
+{
+  display: block;
+  width: 5px;
+  height: 5px;
+  -ms-transform: rotate(45deg); /* IE 9 */
+  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+  transform: rotate(45deg);
+   
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
+  margin: 0 0 3px 4px;
   
-  .scroll-down {
-    margin: 0;
-    border: 2px solid #fff ;
-    -moz-border-radius: 100px;
-    -webkit-border-radius: 100px;
-    border-radius: 100px;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: -50px;
-    margin-top: 10rem;
+  width: 16px;
+  height: 16px;
+}
+
+
+.one
+{
+  margin-top: 1px;
+}
+
+.one, .two, .three
+{
+    -webkit-animation: mouse-scroll 1s infinite;
+    -moz-animation: mouse-scroll 1s infinite;
+    animation: mouse-scroll 1s infinite;
+  
+}
+
+.one
+{
+  -webkit-animation-delay: .1s;
+  -moz-animation-delay: .1s;
+  -webkit-animation-direction: alternate;
+  
+  animation-direction: alternate;
+  animation-delay: alternate;
+}
+
+.two
+{
+  -webkit-animation-delay: .2s;
+  -moz-animation-delay: .2s;
+  -webkit-animation-direction: alternate;
+  
+  animation-delay: .2s;
+  animation-direction: alternate;
+  
+  margin-top: -6px;
+}
+
+.three
+{
+  -webkit-animation-delay: .3s;
+  -moz-animation-delay: .3s;
+  -webkit-animation-direction: alternate;
+  
+  animation-delay: .3s;
+  animation-direction: alternate;
+  
+  
+  margin-top: -6px;
+}
+
+.mouse {
+  height: 42px;
+  width: 24px;
+  border-radius: 14px;
+  transform: none;
+  border: 2px solid white;
+  top: 170px;
+}
+
+.wheel {
+  height: 5px;
+  width: 2px;
+  display: block;
+  margin: 5px auto;
+  background: white;
+  position: relative;
+  
+  height: 4px;
+  width: 4px;
+  border: 2px solid #fff;
+  -webkit-border-radius: 8px;
+          border-radius: 8px;
+}
+
+.wheel {
+  -webkit-animation: mouse-wheel 0.6s linear infinite;
+  -moz-animation: mouse-wheel 0.6s linear infinite;
+  animation: mouse-wheel 0.6s linear infinite;
+}
+
+@-webkit-keyframes mouse-wheel{
+   0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
   }
-  .scroll-down a {
-    display: block;
+
+  100% {
     opacity: 0;
-    -moz-border-radius: 100px;
-    -webkit-border-radius: 100px;
-    border-radius: 100px;
-    -moz-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-    line-height: 0;
-    font-size: 0;
-    color: transparent;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 100%;
-    -moz-background-size: 0 auto;
-    -o-background-size: 0 auto;
-    -webkit-background-size: 0 auto;
-    background-size: 0 auto;
-    -webkit-animation: pulse 1.5s 0s infinite normal ease forwards;
-    -moz-animation: pulse 1.5s 0s infinite normal ease forwards;
-    -o-animation: pulse 1.5s 0s infinite normal ease forwards;
-    animation: pulse 1.5s 0s infinite normal ease forwards;
-    background-image: url("https://jamesmuspratt.com/codepen/img/arrow-down.svg");
-    background-repeat: no-repeat;
+    -webkit-transform: translateY(6px);
+    -ms-transform: translateY(6px);
+    transform: translateY(6px);
   }
-  .scroll-down a:before, .scroll-down a:after {
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background: url("https://jamesmuspratt.com/codepen/img/arrow-down.svg") no-repeat center top;
-    -moz-background-size: 100% auto;
-    -o-background-size: 100% auto;
-    -webkit-background-size: 100% auto;
-    background-size: 100% auto;
-  }
-  .scroll-down a:before {
-    -webkit-animation: pulse 1.5s 0.25s infinite normal ease forwards;
-    -moz-animation: pulse 1.5s 0.25s infinite normal ease forwards;
-    -o-animation: pulse 1.5s 0.25s infinite normal ease forwards;
-    animation: pulse 1.5s 0.25s infinite normal ease forwards;
-  }
-  .scroll-down a:after {
-    -webkit-animation: pulse 1.5s 0.5s infinite normal ease forwards;
-    -moz-animation: pulse 1.5s 0.5s infinite normal ease forwards;
-    -o-animation: pulse 1.5s 0.5s infinite normal ease forwards;
-    animation: pulse 1.5s 0.5s infinite normal ease forwards;
-  }
-  .scroll-down a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-  
+}
+@-moz-keyframes mouse-wheel {
+  0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+@-o-keyframes mouse-wheel {
+
+   0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+@keyframes mouse-wheel {
+
+   0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+
+@-webkit-keyframes mouse-scroll {
+
+  0%   { opacity: 0;}
+  50%  { opacity: .5;}
+  100% { opacity: 1;}
+}
+@-moz-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@-o-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
