--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -8,7 +8,7 @@
   background-position: center;
 }
 
-#mobile {
+.mobile-home {
   background-color: #000;
     display: grid;
     grid-template-columns: 1fr;
@@ -59,10 +59,9 @@ body {
 
 .mouse_scroll {
 	display: block;
-	margin: 5px auto;
+	margin: -50px auto 0 auto;
 	width: 24px;
 	height: 100px;
-	/* margin-top: 50px auto; */
 }
 
 
