--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -93,16 +93,21 @@ p {
 
 .project-card {
     /* background-image: linear-gradient(#6499E9, #232D3F); */
-    background-image: linear-gradient(#DDDBCB, #B1DDF1);
+    /* background-image: linear-gradient(#DDDBCB, #B1DDF1); */
     /* height: 450px;
     width: 450px;
     scroll-snap-align: start;
     border-radius: 25px;
     margin: 20px;  */
     border-radius: 47px;
-    background: #646262;
+    /* background: #646262; */
     box-shadow: inset 30px 30px 75px #4c4a4a,
         inset -30px -30px 75px #7c7a7a;
+}
+
+.project-card:before {
+    background: url(../assets/images/masktest1.jpg);
+    mix-blend-mode: screen;
 }
 
 .projectPadding {
