--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,20 +1,19 @@
 #home {
+  position: relative;
   height: 100dvh;
   width: 100dvw;
   background-color: #000;
-  background-image: url(../assets/images/main_background.png);
+  /* background-image: url(../assets/images/main_background.png); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  overflow: hidden;
 }
 
 .mobile-home {
-  background-color: #000;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
 
 .homeAnchor {
@@ -22,17 +21,15 @@
 }
 
 .profile_image {
-  max-width: 100%;
+  width: 100%;
+  height: 90dvh;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-@media (min-width:1024px) { 
-  .mouse_scroll {
-    margin: 535px auto !important;
-  }
 
-}
-
-@media (max-width:1024px) and (min-width:768px) { 
+/* @media (max-width:1024px) and (min-width:768px) { 
   .mouse_scroll {
     margin: -315px auto !important;
   }
@@ -44,26 +41,38 @@
         max-width: 33% !important;
     }
   
-}
+}  */
 
 /* scroll down arrow */
-body {
-	background: #333;
-}
-
-
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
  }
 
 
 .mouse_scroll {
-	display: block;
+	display: flex;
+  flex-direction: column;
+  align-content: flex-end;
 	margin: -50px auto 0 auto;
 	width: 24px;
 	height: 100px;
+  left: 12rem;
+  bottom: 4rem;
+  position: absolute;
+  z-index: 10;
 }
 
+@media (min-width:1024px) { 
+  .mouse_scroll {
+    bottom: 4rem;
+    left: 60rem;
+    bottom: 4rem;
+  }
+  .profile_image {
+    object-fit: cover;
+    height: 100%;
+  }
+}
 
 .m_scroll_arrows
 {
