--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -9,7 +9,7 @@ p {
 }
 
 .projects {
-    color: #9EDDFF;
+    color: #5DADE2;
     text-align: center;
     padding-bottom: 50px;
 }
@@ -38,34 +38,11 @@ p {
     .egaugnal:hover {
         opacity: 100%;
     }
-
-    /* .projectImg {
-        width: 33dvw !important;
-        height: 40dvh !important;
-    }
-
-    .otherProjects {
-        text-align: center;  
-        width: 50dvw;
-        height: 100dvh;
-        margin: auto;
-    }
-    
-    .carousel-item{
-        height: 75dvh !important;
-        width: 100% !important;
-    } */
 }
 
 .projectImg {
-    /* width: 63dvw; */
     width: 100%;
 }
-
-/* .carousel-item{
-    height: 100dvh;
-    width: 100%;
-} */
 
 .showcase {
     height: 500px;
@@ -81,43 +58,30 @@ p {
     grid-column-gap: 25px;
     grid-row-gap: 25px;
     text-align: center;
-
-    /* overflow: auto;
-    display: flex;
-    width: 50%; 
-    padding: 20px;
-    border-radius: 25px;
-    scroll-snap-type: x mandatory;
-    box-sizing: border-box;  */
 }
 
 .project-card {
-    /* background-image: linear-gradient(#6499E9, #232D3F); */
-    /* background-image: linear-gradient(#DDDBCB, #B1DDF1); */
-    /* height: 450px;
-    width: 450px;
-    scroll-snap-align: start;
-    border-radius: 25px;
-    margin: 20px;  */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    height: 100%; 
     border-radius: 47px;
-    /* background: #646262; */
     box-shadow: inset 30px 30px 75px #4c4a4a,
         inset -30px -30px 75px #7c7a7a;
-}
-
-.project-card:before {
-    background: url(../assets/images/masktest1.jpg);
-    mix-blend-mode: screen;
 }
 
 .projectPadding {
     padding: 10px;
 }
 
+.projectDescription {
+    flex-grow: 1;
+}
+
 .projectName,
 .projectDescription {
     font-size: 1em;
-    color: #f1683a;
+    color: #5DADE2;
 }
 
 .fa-colour {
