--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -3,7 +3,6 @@
   height: 100dvh;
   width: 100dvw;
   background-color: #000;
-  /* background-image: url(../assets/images/main_background.png); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -24,24 +23,11 @@
   width: 100%;
   height: 90dvh;
   position: absolute;
+  object-fit: cover;
+  object-position: center;
   top: 0;
   left: 0;
 }
-
-
-/* @media (max-width:1024px) and (min-width:768px) { 
-  .mouse_scroll {
-    margin: -315px auto !important;
-  }
-
-}
-
-@media (max-width: 768px) {
-    .profile_img {
-        max-width: 33% !important;
-    }
-  
-}  */
 
 /* scroll down arrow */
 *, *:before, *:after {
