--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -23,7 +23,7 @@
   width: 100%;
   height: 90dvh;
   position: absolute;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
   top: 0;
   left: 0;
